--- a/src/assets/sass/variables.scss
+++ b/src/assets/sass/variables.scss
@@ -2,3 +2,7 @@ $primary: #FBFBFB;
 $secondary: #A0A0A0;
 
 $global-font: Helvetica Neue,Helvetica,Arial,sans-serif; 
+
+$mobile: 576px;
+$tablet: 768px;
+$desktop: 992px;
